--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dicoding.smslistenerapp">
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +21,7 @@
         </activity>
         <activity
             android:name=".SmsReceiverActivity"
-            android:theme="@style/SmsReceiverTheme"></activity>
+            android:theme="@style/SmsReceiverTheme" />
 
         <receiver
             android:name=".SmsReceiver"
@@ -29,6 +31,10 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name=".DownloadService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
